app/assets/stylesheets/frontend/views/_corporate-information-pages-worldwide-organisation.scss
.corporate-information-pages-show-worldwide-organisation {
  .content {
    padding: 0 $gutter-half;
  }
  nav {
    @include media(tablet){
      float: left;
      width: $one-third;
    }
    li {
      list-style: none;
      margin-left: 1.2em;

      &:before {
        content: "-";
        position: relative;
        float: left;
        width: $gutter-half;
        margin-left: -$gutter-half;
      }
    }
  }
  .main-body {
    @include media(tablet){
      float: right;
      width: $two-thirds;
    }
    h1.main {
      @include heading-48;
      font-weight: bold;
    }
    .description {
      @include heading-27;
      margin-bottom: $gutter;
    }
    .contact-us {
      @extend %contain-floats;
      margin: 0 (-$gutter-half) $gutter;

      .adr,
      .email-url-number {
        margin-bottom: $gutter-one-third;
        @include media(tablet){
          float: left;
          width: $half;
        }
        .email,
        .tel {
          span {
            float: left;
            min-width: 5em;
            clear: both;
            padding-right: $gutter-one-sixth;
          }
        }
        p {
          @include media(tablet){
            margin: 0 $gutter-half;
          }
        }
      }
      .comments {
        clear: both;
        padding: $gutter-one-third 0;
        color: $secondary-text-colour;
      }
    }
    .govspeak {
      h2 {
        border-bottom: 1px solid $border-colour;
      }
      table {
        margin-left: 0;
        margin-right: 0;
      }
    }
  }
}

